log/build_2024-09-25_08-27-31/python_pkgs/stdout_stderr.log
running egg_info
writing ../../build/python_pkgs/python_pkgs.egg-info/PKG-INFO
writing dependency_links to ../../build/python_pkgs/python_pkgs.egg-info/dependency_links.txt
writing entry points to ../../build/python_pkgs/python_pkgs.egg-info/entry_points.txt
writing requirements to ../../build/python_pkgs/python_pkgs.egg-info/requires.txt
writing top-level names to ../../build/python_pkgs/python_pkgs.egg-info/top_level.txt
reading manifest file '../../build/python_pkgs/python_pkgs.egg-info/SOURCES.txt'
writing manifest file '../../build/python_pkgs/python_pkgs.egg-info/SOURCES.txt'
running build
running build_py
copying python_pkgs/drone_image.py -> /home/shiva/ros2_playground/workspace2/build/python_pkgs/build/lib/python_pkgs
running install
running install_lib
copying /home/shiva/ros2_playground/workspace2/build/python_pkgs/build/lib/python_pkgs/drone_image.py -> /home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs
byte-compiling /home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs/drone_image.py to drone_image.cpython-310.pyc
  File "/home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs/drone_image.py", line 81
    def
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/python_pkgs/python_pkgs.egg-info to /home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python3.10/site-packages/python_pkgs-0.0.0-py3.10.egg-info
running install_scripts
Installing drone_image script to /home/shiva/ros2_playground/workspace2/install/python_pkgs/lib/python_pkgs
writing list of installed files to '/home/shiva/ros2_playground/workspace2/build/python_pkgs/install.log'
